--- a/src/app/modules/governance/governance.component.html
+++ b/src/app/modules/governance/governance.component.html
@@ -1,5 +1,11 @@
 <div class="m-governance_body">
-  <div class="m-governance--row" *ngIf="isDetailScreen()">
+  <div
+    [ngClass]="{
+      'm-governance--row': router.url !== '/governance/create',
+      'm-governance--row-detail': router.url === '/governance/create'
+    }"
+    *ngIf="isDetailScreen()"
+  >
     <m-governance__tabs
       *ngIf="router.url !== '/governance/create'"
     ></m-governance__tabs>
@@ -7,7 +13,8 @@
     <button
       class="m-governance-button"
       (click)="goToCreate()"
-      [disabled]="tokenBalance <= 0"
+      *ngIf="router.url !== '/governance/create'"
+      [disabled]="tokenBalance < 1"
     >
       Submit proposal
     </button>
