--- a/src/app/modules/governance/proposal-detail/proposal-detail.component.html
+++ b/src/app/modules/governance/proposal-detail/proposal-detail.component.html
@@ -1,6 +1,10 @@
 <div class="m-governance--proposal-detail">
   <div class="m-pageLayout__pane--main" m-pageLayout__pane="main">
     <div *ngIf="!inProgress">
+      <a routerLink="/governance/latest">
+        <i class="material-icons">arrow_back</i
+        ><span i18n="@@COMMON__ACTIONS__BACK">See all proposals</span>
+      </a>
       <div class="m-governance--proposal-detail-options-row">
         <div class="m-governance--proposal-detail-header">
           {{ proposal.title }}
@@ -10,73 +14,45 @@
           [proposal]="proposal"
         ></m-governance--proposal-detail-dropdown>
       </div>
-
-      <div
-        [ngClass]="{
-          'm-governance__card-status-green':
-            proposal.state === 'closed' || proposal.state === 'active',
-          'm-governance__card-orange': proposal.state === 'pending',
-          'm-governance__card-status-red': proposal.state === 'rejected'
-        }"
-        class="m-governance__card-status m-governance__card-status-text"
-      >
-        <m-icon
-          *ngIf="proposal.state === 'closed'"
-          class="m-governance__card-check m-governance__card-status-green"
-          iconId="check"
-        ></m-icon>
-        {{ proposal.state }}
+      <div class="m-governance--state-row">
+        <div class="m-governance--user-row">
+          <div
+            class="m-proposal--actions-active"
+            *ngIf="proposal.state === 'active'"
+          >
+            Voting open
+          </div>
+          <div
+            [ngClass]="{
+              'm-proposal--actions-pending': proposal.state === 'pending',
+              'm-proposal--actions-closed': proposal.state === 'closed'
+            }"
+            *ngIf="proposal.state !== 'active'"
+          >
+            {{ proposal.state }}
+          </div>
+          <div
+            class="m-governance--user-row m-governance--proposal-detail-extra"
+          >
+            &nbsp;·&nbsp;Proposed by
+            <div class="m-governance--user">&nbsp; @thatGuy</div>
+          </div>
+        </div>
+        <div class="m-governance--user-row">
+          <m-icon iconId="share"></m-icon>
+          <div>Share proposal</div>
+        </div>
       </div>
+      <!-- Body -->
       <div
         class="m-governance--proposal-detail-body-title"
         [innerHTML]="proposal.body"
       ></div>
+      <!-- End of body -->
     </div>
   </div>
 
-  <div>
-    <div class="m-governance--proposal-detail-info" *ngIf="!inProgress">
-      <div
-        class="
-          m-governance--proposal-detail-row
-          m-governance--proposal-detail-title
-          m-governance--proposal-detail-pointer
-        "
-        (click)="openSnapshot(proposal.id)"
-      >
-        <span>Information</span>
-        <m-icon iconId="open_in_new" m-tooltip--icon></m-icon>
-      </div>
-
-      <div class="m-governance--proposal-detail-row">
-        <div class="m-governance--proposal-detail-extra">Author</div>
-        <div class="m-governance--proposal-detail-value">
-          {{ truncatedOnchainAddress(proposal.author) }}
-        </div>
-      </div>
-
-      <div class="m-governance--proposal-detail-row">
-        <div class="m-governance--proposal-detail-extra">Start date</div>
-        <div class="m-governance--proposal-detail-value">
-          {{ proposal.start }}
-        </div>
-      </div>
-
-      <div class="m-governance--proposal-detail-row">
-        <div class="m-governance--proposal-detail-extra">End date</div>
-        <div class="m-governance--proposal-detail-value">
-          {{ proposal.end }}
-        </div>
-      </div>
-
-      <div class="m-governance--proposal-detail-row">
-        <div class="m-governance--proposal-detail-extra">Snapshot</div>
-        <div class="m-governance--proposal-detail-value">
-          #{{ proposal.snapshot }}
-        </div>
-      </div>
-    </div>
-
+  <div class="m-governance--proposal-detail-column">
     <m-loadingSpinner
       *ngIf="inProgress"
       [inProgress]="inProgress"
@@ -87,5 +63,49 @@
       [space]="space"
       [votes]="votes$ | async"
     ></m-voting-card>
+
+    <div class="m-governance--proposal-detail-info" *ngIf="!inProgress">
+      <div
+        class="
+          m-governance--proposal-detail-row
+          m-governance--proposal-detail-title
+          m-governance--proposal-detail-pointer
+        "
+      >
+        <span>Information</span>
+        <!-- <m-icon iconId="open_in_new" m-tooltip--icon></m-icon> -->
+      </div>
+
+      <div class="m-governance--proposal-detail-row">
+        <div class="m-governance--proposal-detail-extra">Proposed by</div>
+        <div class="m-governance--proposal-detail-value">
+          {{ truncatedOnchainAddress(proposal.author) }}
+        </div>
+      </div>
+
+      <div class="m-governance--proposal-detail-row">
+        <div class="m-governance--proposal-detail-extra">Published</div>
+        <div class="m-governance--proposal-detail-value">
+          {{ proposal.start }}
+        </div>
+      </div>
+
+      <div class="m-governance--proposal-detail-row">
+        <div class="m-governance--proposal-detail-extra">Voting closes</div>
+        <div class="m-governance--proposal-detail-value">
+          {{ proposal.end }}
+        </div>
+      </div>
+
+      <div class="m-governance--proposal-detail-row">
+        <div class="m-governance--proposal-detail-extra">Snapshot</div>
+        <div
+          class="m-governance--proposal-detail-value-snapshot"
+          (click)="openSnapshot(proposal.id)"
+        >
+          #{{ proposal.snapshot }}
+        </div>
+      </div>
+    </div>
   </div>
 </div>
