--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -63,6 +63,18 @@
     <div class="m-channelFeed__list" *ngIf="!isGrid">
       <ng-container *ngIf="feed?.length > 0">
         <m-composer *ngIf="service.isOwner$ | async"></m-composer>
+
+        <div *ngIf="previousPageUrl" class="m-channelFeed__loadBefore__container">
+          <m-link-button
+            [url]="previousPageUrl"
+          >
+            <ng-container
+              i18n="@@COMMON__INFINITE_SCROLL__LOAD_MORE"
+            >Load more
+            </ng-container>
+          </m-link-button>
+        </div>
+
         <div
           class="m-channelFeedList__entities"
           m-hotkeyScroll
@@ -257,6 +269,7 @@
     <infinite-scroll
       distance="25%"
       (load)="feedService.loadNext()"
+      [nextPageUrl]="nextPageUrl"
       [moreData]="feedService.service.hasMore | async"
       [inProgress]="feedService.service.inProgress | async"
     ></infinite-scroll
