--- a/src/app/modules/channels/v2/feed/feed.component.ng.scss
+++ b/src/app/modules/channels/v2/feed/feed.component.ng.scss
@@ -77,6 +77,18 @@
       @media screen and (max-width: $layoutMax2ColFixedWidth) {
         min-width: 100%;
       }
+
+      .m-channelFeed__loadBefore__container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 30px;
+      }
+
+      m-composer + .m-channelFeed__loadBefore__container {
+        margin-top: 30px;
+      }
     }
 
     .m-channelFeed__emptyFeedContainer {
