--- a/src/app/modules/admin/withdrawals/withdrawals.component.html
+++ b/src/app/modules/admin/withdrawals/withdrawals.component.html
@@ -5,11 +5,30 @@
       >'s withdrawals
     </ng-container>
 
-    <ng-container *ngIf="!user">
-      Pending Withdrawals
-    </ng-container>
+    <ng-container *ngIf="!user"> Pending Withdrawals </ng-container>
   </div>
 
+  <div class="m-admin-withdrawals__transactionInputContainer" *ngIf="!user">
+    <input
+      class="m-admin-withdrawals__transactionInput"
+      type="text"
+      placeholder="Manually Add by Transaction ID"
+      #txInput
+    />
+    <m-button
+      class="m-admin-withdrawals__transactionInputButton"
+      (onAction)="addMissingWithdrawal(txInput.value)"
+      size="'small'"
+      >Submit</m-button
+    >
+    <m-button
+      class="m-admin-withdrawals__transactionInputButton"
+      (onAction)="garbageCollect()"
+      size="'small'"
+      color="'red'"
+      >Garbage Collect</m-button
+    >
+  </div>
   <div
     class="m-admin-withdrawals__card"
     *ngFor="let request of withdrawals; let i = index"
@@ -60,7 +79,10 @@
         <div class="m-admin-withdrawalsCardCell__label">Amount</div>
 
         <div
-          class="m-admin-withdrawalsCardCell__body m-admin-withdrawalsCardCell__body--bolder"
+          class="
+            m-admin-withdrawalsCardCell__body
+            m-admin-withdrawalsCardCell__body--bolder
+          "
         >
           {{ request.amount | token: 18 | number: '1.0-4' }}
         </div>
@@ -77,7 +99,10 @@
       <div class="m-admin-withdrawalsCard__cell" *ngIf="request.tx">
         <div class="m-admin-withdrawalsCardCell__label">Wallet</div>
         <div
-          class="m-admin-withdrawalsCardCell__body m-admin-withdrawalsCardCell__body--txId"
+          class="
+            m-admin-withdrawalsCardCell__body
+            m-admin-withdrawalsCardCell__body--txId
+          "
         >
           <div class="m-admin-withdrawals__txId">
             {{ request.user.eth_wallet }}
@@ -94,7 +119,10 @@
       <div class="m-admin-withdrawalsCard__cell" *ngIf="request.tx">
         <div class="m-admin-withdrawalsCardCell__label">Request TX</div>
         <div
-          class="m-admin-withdrawalsCardCell__body m-admin-withdrawalsCardCell__body--txId"
+          class="
+            m-admin-withdrawalsCardCell__body
+            m-admin-withdrawalsCardCell__body--txId
+          "
         >
           <div class="m-admin-withdrawals__txId">{{ request.tx }}</div>
           <m-admin__txExplorers
@@ -110,7 +138,10 @@
         <div class="m-admin-withdrawalsCardCell__label">Payout TX</div>
 
         <div
-          class="m-admin-withdrawalsCardCell__body m-admin-withdrawalsCardCell__body--txId"
+          class="
+            m-admin-withdrawalsCardCell__body
+            m-admin-withdrawalsCardCell__body--txId
+          "
         >
           <div class="m-admin-withdrawals__txId">
             {{ request.completed_tx }}
@@ -125,7 +156,9 @@
       </div>
 
       <div
-        class="m-admin-withdrawalsCard__cell m-admin-withdrawalsCard__cell--actions"
+        class="
+          m-admin-withdrawalsCard__cell m-admin-withdrawalsCard__cell--actions
+        "
         *ngIf="request.status === 'pending_approval'"
       >
         <div class="m-admin-withdrawalsCardCell__body">
@@ -152,6 +185,31 @@
             (onAction)="reject(request)"
           >
             Reject
+          </m-button>
+        </div>
+      </div>
+      <div
+        class="
+          m-admin-withdrawalsCard__cell m-admin-withdrawalsCard__cell--actions
+        "
+        *ngIf="request.status !== 'pending_approval'"
+      >
+        <div class="m-admin-withdrawalsCardCell__body">
+          <m-button
+            size="small"
+            [saving]="inProgress"
+            [disabled]="inProgress"
+            (onAction)="forceConfirmation(request)"
+          >
+            Force Confirm
+          </m-button>
+          <m-button
+            size="small"
+            [saving]="inProgress"
+            [disabled]="inProgress"
+            (onAction)="redispatchCompleted(request)"
+          >
+            Redispatch
           </m-button>
         </div>
       </div>
