Show linked parent entities #4860

--- a/src/app/modules/report/juryduty/session/content.component.scss
+++ b/src/app/modules/report/juryduty/session/content.component.scss
@@ -84,6 +84,11 @@
   }
 }
 
+// fix images showing as too wide.
+.m-comment-attachment img {
+  max-width: 100%;
+}
+
 .m-juryDutySessionContent__options {
   margin-top: 20px;
 
