--- a/src/app/modules/auth/multi-factor-auth/panels/recovery-code/recovery-code.component.html
+++ b/src/app/modules/auth/multi-factor-auth/panels/recovery-code/recovery-code.component.html
@@ -7,8 +7,7 @@
     >Recovery code</label
   >
   <input
-    [ngModel]="code$ | async"
-    (ngModelChange)="onCodeChange($event)"
+    [(ngModel)]="code"
     class="m-mfaAuth__codeInput"
     type="text"
     placeholder="Enter your recovery code"
@@ -18,7 +17,7 @@
 <m-button
   class="m-mfaAuth__verifyButton"
   [color]="'blue'"
-  [disabled]="disabled$ | async"
+  [disabled]="code.length < 6"
   [saving]="inProgress$ | async"
   (onAction)="onVerifyClick()"
 >
