--- a/src/app/modules/auth/multi-factor-auth/multi-factor-auth.component.ng.scss
+++ b/src/app/modules/auth/multi-factor-auth/multi-factor-auth.component.ng.scss
@@ -4,7 +4,11 @@
   width: 600px;
   display: flex;
   flex-flow: column nowrap;
-  background: white;
+
+  @include m-theme() {
+    background: themed($m-bgColor--primary);
+  }
+
   z-index: 1;
 
   .m-mfaBase__header {
