--- a/src/app/modules/governance/proposal-list/proposal-list.component.scss
+++ b/src/app/modules/governance/proposal-list/proposal-list.component.scss
@@ -3,7 +3,7 @@
 .m-governance__card {
   padding: 20px 40px;
   @media screen and (max-width: $max-mobile) {
-    padding: 20px 24px;
+    padding: 0px;
   }
 
   .m-governance-total {
