--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -73,7 +73,7 @@
 
             <a
               class="m-v3TopbarLoginWrapper__joinMindsNow"
-              (click)="onJoinNowClick()"
+              href="mindsapp://open"
               title="Join Minds Now"
               i18n-title="@@COMMON__JOIN_MINDS_NOW"
             >
