--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -64,14 +64,16 @@
       <ng-container *ngIf="feed?.length > 0">
         <m-composer *ngIf="service.isOwner$ | async"></m-composer>
 
-        <div *ngIf="previousPageUrl" class="m-channelFeed__loadBefore__container">
+        <div
+          *ngIf="previousPageUrl"
+          class="m-channelFeed__loadBefore__container"
+        >
           <m-link-button
             [url]="previousPageUrl"
             data-cy="data-minds-load-previous-page-button"
           >
-            <ng-container
-              i18n="@@COMMON__INFINITE_SCROLL__LOAD_MORE"
-            >Load more
+            <ng-container i18n="@@COMMON__INFINITE_SCROLL__LOAD_MORE"
+              >Load more
             </ng-container>
           </m-link-button>
         </div>
