--- a/src/app/modules/governance/governance.component.html
+++ b/src/app/modules/governance/governance.component.html
@@ -13,19 +13,19 @@
     <button
       class="m-governance-button"
       (click)="goToCreate()"
-      *ngIf="router.url !== '/governance/create' && !mobile"
+      *ngIf="router.url !== '/governance/create' && this.hasToken() && !mobile"
       [disabled]="tokenBalance < 1"
     >
       Submit proposal
     </button>
-    
+
     <button
-    class="m-governance-button-icon"
-    (click)="goToCreate()"
-    *ngIf="router.url !== '/governance/create' && mobile"
-    [disabled]="tokenBalance < 1"
-  >
-    <i class="material-icons">note_add</i>
+      class="m-governance-button-icon"
+      (click)="goToCreate()"
+      *ngIf="router.url !== '/governance/create' && this.hasToken() && mobile"
+      [disabled]=""
+    >
+      <i class="material-icons">note_add</i>
     </button>
   </div>
 
