(fix) dont show href if no url was given

--- a/src/app/common/components/link-button/link-button.component.html
+++ b/src/app/common/components/link-button/link-button.component.html
@@ -1,6 +1,6 @@
 <a
   class="m-link-button"
-  [href]="url"
+  [attr.href]="disabled ? undefined : url"
   [ngClass]="{
     'm-button--grey': color === 'grey',
     'm-button--blue': color === 'blue',
