(feat) change contact info

--- a/src/app/modules/aux-pages/pages/contact/contact.component.html
+++ b/src/app/modules/aux-pages/pages/contact/contact.component.html
@@ -2,10 +2,14 @@
 <h3>General Enquiries and Support</h3>
 <ul>
   <li>
-    <p><a href="https://support.minds.com/" target="_blank">Help Desk</a></p>
+    <p>
+      <a href="https://support.minds.com/" target="_blank">Support Center</a>
+    </p>
   </li>
   <li>
-    <p><a href="mailto:info@minds.com">info@minds.com</a></p>
+    <p>
+      <a href="mailto:support@minds.zendesk.com">support@minds.zendesk.com</a>
+    </p>
   </li>
 </ul>
 <h3>Press</h3>
