Refactor save logic

--- a/src/app/modules/onboarding-v3/modal/onboarding-modal.component.html
+++ b/src/app/modules/onboarding-v3/modal/onboarding-modal.component.html
@@ -50,7 +50,7 @@
     ></m-onboardingV3__welcome>
     <m-onboardingV3__channel
       *ngSwitchCase="'SetupChannelStep'"
-      [nextClicked$]="nextClicked$"
+      #awaitablePanel
     ></m-onboardingV3__channel>
     <m-onboardingV3__verifyUniqueness
       *ngSwitchCase="'VerifyUniquenessStep'"
