--- a/src/app/modules/channels/v2/channel.component.html
+++ b/src/app/modules/channels/v2/channel.component.html
@@ -24,7 +24,10 @@
             >
           </div>
 
-          <div class="m-tabs__tab">
+          <div
+            class="m-tabs__tab"
+            *mExperiment="'channel-gallery'; variation: 'on'"
+          >
             <a
               [routerLink]="['/', username, '']"
               [queryParams]="{ layout: 'grid' }"
