--- a/src/app/modules/wallet/components/tokens/tokens.component.html
+++ b/src/app/modules/wallet/components/tokens/tokens.component.html
@@ -58,6 +58,15 @@
       On-chain transfers
     </a>
   </li>
+  <li class="m-tabs__tab" *mIfFeature="'skale'">
+    <a
+      routerLink="skale"
+      routerLinkActive="selected"
+      i18n="@@WALLET_V2__ONCHAIN__TRANSFERS"
+    >
+      SKALE
+    </a>
+  </li>
   <li class="m-tabs__tab">
     <a
       routerLink="settings"
