--- a/src/app/modules/settings-v2/security/two-factor-v2/root/root.component.html
+++ b/src/app/modules/settings-v2/security/two-factor-v2/root/root.component.html
@@ -83,3 +83,22 @@
     </ng-container>
   </m-button>
 </div>
+
+<!-- Email 2FA is always on when TOTP and SMS are not enabled -->
+<div
+  class="m-twoFactor__optionContainer"
+  *ngIf="!(smsEnabled$ | async) && !(totpEnabled$ | async)"
+>
+  <h4 class="m-twoFactor__optionTitle">
+    <ng-container i18n="@@MFA_SETTINGS_ROOT__EMAIL">Email</ng-container>
+    <!-- Always enabled if this is showing -->
+    <span i18n="is enabled|@@MFA_SETTINGS_ROOT__ENABLED">Enabled</span>
+  </h4>
+  <p
+    class="m-twoFactor__optionDescription"
+    i18n="@@MFA_SETTINGS_ROOT__MINDS_WILL_SEND_EMAIL"
+  >
+    Minds will send you an email with a two-factor authentication code when no
+    other Two-factor authentication is set-up.
+  </p>
+</div>
