(chore): do not show total token balance as they are innacurate

--- a/src/app/modules/wallet/components/components/transactions-table/transactions-table.component.scss
+++ b/src/app/modules/wallet/components/components/transactions-table/transactions-table.component.scss
@@ -153,6 +153,7 @@ m-walletTransactionsTable {
 
   .m-walletTransactionsTable__totalWrapper {
     text-align: right;
+    display: none; // inaccurate
   }
 
   .m-walletTransactionsTable__total--int {
