Remove running balance from wallet due to various glitches #5010

--- a/src/app/modules/wallet/components/components/transactions-table/transactions-table.component.scss
+++ b/src/app/modules/wallet/components/components/transactions-table/transactions-table.component.scss
@@ -39,6 +39,10 @@
 m-walletTransactionsTable {
   table {
     width: 100%;
+
+    @media screen and (min-width: $min-desktop) {
+      padding: 0 50px;
+    }
   }
   tr {
     vertical-align: top;
